calculator page > fix width card on small size

--- a/app/blocks/pages/calculator-page/calculator-page.styl
+++ b/app/blocks/pages/calculator-page/calculator-page.styl
@@ -278,8 +278,17 @@
 		&__card
 			max-width calc(33% - 8px)
 			margin-right 9px !important
-			
 				
 			&:nth-child(3n)
 				margin-right 0
+				
+
+	+max(425px)
+		
+		&__card
+			max-width calc(50% - 10px)
+			margin-right 20px !important
+				
+			&:nth-child(even)
+				margin-right 0 !important
 			
